--- a/left-right/style.css
+++ b/left-right/style.css
@@ -1,4 +1,4 @@
 *{margin: 0; padding: 0;}
 div{width: 500px; height: 500px;}
-span{display: block; width: 0; height: 500px; background: url(7651016944_IMG_0357.JPG) no-repeat 0 0 / 500px 300px; transition: all 5s;}
+span{display: block; width: 0; height: 500px; background: #fda url(7651016944_IMG_0357.JPG) no-repeat 0 0 / 500px 300px; transition: all 5s;}
 
